--- a/views/content/header.ejs
+++ b/views/content/header.ejs
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta name="viewport" content="width=300">
+	<meta name="google-site-verification" content="2_awJcgkLg0TmhK8szMqBCFJO47C9D6NXMQWlNCu3l0" />
 	<meta charset="utf-8">
 	<title>Home</title>
 	<script type="text/javascript" src="/jquery-ui-1.12.1/jquery-3.3.1.js"></script>
