--- a/views/content/header.ejs
+++ b/views/content/header.ejs
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta name="viewport" content="width=300">
 	<meta name="google-site-verification" content="2_awJcgkLg0TmhK8szMqBCFJO47C9D6NXMQWlNCu3l0" />
+	<meta name="description" content="Na capture emails você consegue amazenar emails para fazer marketing de forma prática e melhor ainda! É TUDO GRATUITO
+	Venha criar suas página de captura agora mesmo!">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="keywords" content="Captura de emails gratis, captura de emails gratuito, capturar emails como afiliado, capturar email gratis, capturar email online, captura de email">
 	<meta charset="utf-8">
 	<title>Home</title>
 	<script type="text/javascript" src="/jquery-ui-1.12.1/jquery-3.3.1.js"></script>
