--- a/views/content/header.ejs
+++ b/views/content/header.ejs
@@ -2,8 +2,6 @@
 <html>
 <head>
 	<meta name="google-site-verification" content="2_awJcgkLg0TmhK8szMqBCFJO47C9D6NXMQWlNCu3l0" />
-	<meta name="description" content="Na capture emails você consegue amazenar emails para fazer marketing de forma prática e melhor ainda! É TUDO GRATUITO
-	Venha criar suas página de captura agora mesmo!">
 	<meta name="viewport" content="width=300">
 	<meta name="keywords" content="Captura de emails gratis, captura de emails gratuito, capturar emails como afiliado, capturar email gratis, capturar email online, captura de email">
 	<meta charset="utf-8">
@@ -11,10 +9,15 @@
 		if(amostra){
 			%>
 			<title><%= amostra.titulo%></title>
+			<meta name="description" content="<%= amostra.descricao%>">
+	
 			<%
 		}else{
 			%>
 			<title>Capture Emails</title>
+			<meta name="description" content="Na capture emails você consegue amazenar emails para fazer marketing de forma prática e melhor ainda! É TUDO GRATUITO
+	Venha criar suas página de captura agora mesmo!">
+	
 			<%
 		}
 	%>
